--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -37,9 +37,9 @@ jobs:
               #here after getting into ubuntu container it is going to terraform dir then checkout to branch
             
             - name: Setup terraform with specific version on runner
-              uses: hashicorp/setup-terraform@v2 #predefined in marketplace (https://github.com/marketplace/actions/hashicorp-setup-terraform)
-            #   with:
-            #     terraform_version: 1.6.3 # this is terrsaform version
+              uses: hashicorp/setup-terraform@v3 #predefined in marketplace (https://github.com/marketplace/actions/hashicorp-setup-terraform)
+              with:
+                terraform_version: 1.6.3 # this is terraform version
 
             - name: Terrafrom init
               id: inti # id is to refference it in next task , git info of the task
