--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -63,4 +63,25 @@ jobs:
               #we check plan is failed?
               if: steps.plan.outcome == 'failure'
               run: exit 1
-
+            
+            - name: Terraform apply
+              id: apply
+              #run this only if push happens to main  branch
+              if: github.ref == 'refs/heads/main' && github.event_name == 'push' 
+              run: terraform apply -auto-approve -input=false -parallelism=1 planfile #run terraform apply with present in planfile with out asking confirmation and no user input and don't do parallelism
+              
+            - name: Configure AWS Credentials
+              uses: aws-actions/configure-aws-credentials@v4.1.0 # https://github.com/marketplace/actions/configure-aws-credentials-action-for-github-actions
+              with:
+                aws-access-key-id:  ${{secrets.AWS_ACCESS_KEY_ID}}
+                aws-secret-access-key: ${{secrets.AWS_SECRET_ACCESS_KEY}}
+                aws-region: ${{env.AWS_REGION}}
+            
+            - name: Get Kube Config file
+              id: getConfig
+              if: steps.apply.outcome == 'success'
+              run: aws eks update-kubeconfig --region ${{env.AWS_REGION}} --name ${{env.EKS_CLUSTER}} #get the kubeconfig file from eks
+            
+            - name: Install ingress controller
+              if: steps.getConfig.outcome == 'success'
+              run: kubectl apply -f https://raw.githubusercontent.com/kubernetes/ingress-nginx/controller-v1.12.2/deploy/static/provider/aws/deploy.yaml #once the kube config file is available you can run k8s cmd's
